// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Args TU should add Args metadata to a method when decorated with @Args() 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "args",
    },
  ],
]
`;

exports[`Args TU should add Args metadata to a method when decorated with @Args(path) 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "test",
      ],
      "handler": [Function],
      "type": "args",
    },
  ],
]
`;

exports[`Context TU should add Context metadata to a method when decorated with @Context() 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "context",
    },
  ],
]
`;

exports[`Context TU should add Context metadata to a method when decorated with @Context(path) 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "test",
      ],
      "handler": [Function],
      "type": "context",
    },
  ],
]
`;

exports[`Info TU should add Info metadata to a method when decorated with @Info() 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "info",
    },
  ],
]
`;

exports[`Info TU should add Info metadata to a method when decorated with @Info(path) 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "test",
      ],
      "handler": [Function],
      "type": "info",
    },
  ],
]
`;

exports[`Parent TU should add Parent metadata to a method when decorated with @Parent() 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "parent",
    },
  ],
]
`;

exports[`Parent TU should add Parent metadata to a method when decorated with @Parent(path) 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "test",
      ],
      "handler": [Function],
      "type": "parent",
    },
  ],
]
`;
